--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,16 +10,7 @@
         "id": "xHw1eWIPOXd5",
         "outputId": "99d861a0-caac-4591-f1a7-57167ad33c5c"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/yfinance/base.py:48: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-            "  _empty_series = pd.Series()\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import time  # to simulate a real time data, time loop\n",
         "import yfinance as yf\n",
@@ -38,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -107,22 +98,192 @@
         "                    v_imp_date.append(df.loc[i+2, 'date'])\n",
         "\n",
         "    dates = list(set(imp_date) | set(v_imp_date))\n",
-        "    print(dates)\n",
+        "    #print(dates)\n",
         "\n",
         "    df = df[df['corr'] < -0.05]\n",
         "\n",
         "    df['index'] = df['corr']*df['pc']\n",
-        "    print(df.sort_values(by = 'index', ascending= False).head(2))\n",
+        "    #print(df.sort_values(by = 'index', ascending= False).head(2))\n",
+        "\n",
+        "    return dates\n",
         "\n",
         "    #return df"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Sr. No.</th>\n",
+              "      <th>Symbol</th>\n",
+              "      <th>Company Name</th>\n",
+              "      <th>Market capitalization as on March 31, 2023\\n(Rs in Lakhs)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>RELIANCE</td>\n",
+              "      <td>Reliance Industries Limited</td>\n",
+              "      <td>1.577069e+08</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>TCS</td>\n",
+              "      <td>Tata Consultancy Services Limited</td>\n",
+              "      <td>1.173055e+08</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>HDFCBANK</td>\n",
+              "      <td>HDFC Bank Limited</td>\n",
+              "      <td>8.980875e+07</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>ICICIBANK</td>\n",
+              "      <td>ICICI Bank Limited</td>\n",
+              "      <td>6.124825e+07</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>HINDUNILVR</td>\n",
+              "      <td>Hindustan Unilever Limited</td>\n",
+              "      <td>6.015776e+07</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2009</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>MELSTAR</td>\n",
+              "      <td>Melstar Information Technologies Limited</td>\n",
+              "      <td>3.356538e+02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010</th>\n",
+              "      <td>2011</td>\n",
+              "      <td>SABEVENTS</td>\n",
+              "      <td>Sab Events &amp; Governance Now Media Limited</td>\n",
+              "      <td>3.197532e+02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2011</th>\n",
+              "      <td>2012</td>\n",
+              "      <td>INDLMETER</td>\n",
+              "      <td>IMP Powers Limited</td>\n",
+              "      <td>2.590969e+02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012</th>\n",
+              "      <td>2013</td>\n",
+              "      <td>TECILCHEM</td>\n",
+              "      <td>TECIL Chemicals and Hydro Power Limited</td>\n",
+              "      <td>1.896370e+02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013</th>\n",
+              "      <td>Note: Kindly refer regulation 15 to 27 of SEBI...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2014 rows × 4 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                Sr. No.      Symbol  \\\n",
+              "0                                                     1    RELIANCE   \n",
+              "1                                                     2         TCS   \n",
+              "2                                                     3    HDFCBANK   \n",
+              "3                                                     4   ICICIBANK   \n",
+              "4                                                     5  HINDUNILVR   \n",
+              "...                                                 ...         ...   \n",
+              "2009                                               2010     MELSTAR   \n",
+              "2010                                               2011   SABEVENTS   \n",
+              "2011                                               2012   INDLMETER   \n",
+              "2012                                               2013   TECILCHEM   \n",
+              "2013  Note: Kindly refer regulation 15 to 27 of SEBI...         NaN   \n",
+              "\n",
+              "                                   Company Name  \\\n",
+              "0                   Reliance Industries Limited   \n",
+              "1             Tata Consultancy Services Limited   \n",
+              "2                             HDFC Bank Limited   \n",
+              "3                            ICICI Bank Limited   \n",
+              "4                    Hindustan Unilever Limited   \n",
+              "...                                         ...   \n",
+              "2009   Melstar Information Technologies Limited   \n",
+              "2010  Sab Events & Governance Now Media Limited   \n",
+              "2011                         IMP Powers Limited   \n",
+              "2012    TECIL Chemicals and Hydro Power Limited   \n",
+              "2013                                        NaN   \n",
+              "\n",
+              "      Market capitalization as on March 31, 2023\\n(Rs in Lakhs)  \n",
+              "0                                          1.577069e+08          \n",
+              "1                                          1.173055e+08          \n",
+              "2                                          8.980875e+07          \n",
+              "3                                          6.124825e+07          \n",
+              "4                                          6.015776e+07          \n",
+              "...                                                 ...          \n",
+              "2009                                       3.356538e+02          \n",
+              "2010                                       3.197532e+02          \n",
+              "2011                                       2.590969e+02          \n",
+              "2012                                       1.896370e+02          \n",
+              "2013                                                NaN          \n",
+              "\n",
+              "[2014 rows x 4 columns]"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "nse_df = pd.read_excel('nse_data.xlsx')\n",
+        "nse_df = nse_df.head(100)\n",
+        "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
+        "\n",
+        "for stock_id in list(set(nse_df['Symbol'])):\n",
+        "    dates = get_recom('TATAPOWER.NS', '2024-01-01', '2024-12-31')\n",
+        "    if len(dates) >= 1:\n",
+        "        print(stock_id, dates)\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -4394,7 +4555,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
