stocks that are on demand now

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -54,7 +54,7 @@
         "    df1 = df1.reset_index()\n",
         "\n",
         "    avg = df1['price'].mean()\n",
-        "    print(avg)\n",
+        "    #print(avg)\n",
         "\n",
         "    df1['Week_Number'] = df1['Date'].dt.isocalendar().week\n",
         "\n",
@@ -90,14 +90,18 @@
         "    imp_date = []\n",
         "    v_imp_date = []\n",
         "\n",
-        "    for i in range(len(df)):\n",
-        "        if ((df.loc[i, 'corr'] < 0) &(df.loc[i, 'pc'] <= 0)):\n",
-        "            if ((df.loc[i+1, 'corr'] < 0) &(df.loc[i+1, 'pc'] <= 0)):\n",
-        "                imp_date.append(df.loc[i+1, 'date'])\n",
-        "                if ((df.loc[i+2, 'corr'] < 0) &(df.loc[i+2, 'pc'] <= 0)):\n",
-        "                    v_imp_date.append(df.loc[i+2, 'date'])\n",
+        "    \n",
+        "    try:\n",
+        "        for i in range(len(df)):\n",
+        "            if ((df.loc[i, 'corr'] < 0) &(df.loc[i, 'pc'] <= 0)):\n",
+        "                if ((df.loc[i+1, 'corr'] < 0) &(df.loc[i+1, 'pc'] <= 0)):\n",
+        "                    imp_date.append(df.loc[i+1, 'date'])\n",
+        "                    if ((df.loc[i+2, 'corr'] < 0) &(df.loc[i+2, 'pc'] <= 0)):\n",
+        "                        v_imp_date.append(df.loc[i+2, 'date'])\n",
         "\n",
-        "    dates = list(set(imp_date) | set(v_imp_date))\n",
+        "        dates = list(set(imp_date) | set(v_imp_date))\n",
+        "    except:\n",
+        "        dates = []\n",
         "    #print(dates)\n",
         "\n",
         "    df = df[df['corr'] < -0.05]\n",
@@ -112,176 +116,212 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Sr. No.</th>\n",
-              "      <th>Symbol</th>\n",
-              "      <th>Company Name</th>\n",
-              "      <th>Market capitalization as on March 31, 2023\\n(Rs in Lakhs)</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>RELIANCE</td>\n",
-              "      <td>Reliance Industries Limited</td>\n",
-              "      <td>1.577069e+08</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>TCS</td>\n",
-              "      <td>Tata Consultancy Services Limited</td>\n",
-              "      <td>1.173055e+08</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>HDFCBANK</td>\n",
-              "      <td>HDFC Bank Limited</td>\n",
-              "      <td>8.980875e+07</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4</td>\n",
-              "      <td>ICICIBANK</td>\n",
-              "      <td>ICICI Bank Limited</td>\n",
-              "      <td>6.124825e+07</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5</td>\n",
-              "      <td>HINDUNILVR</td>\n",
-              "      <td>Hindustan Unilever Limited</td>\n",
-              "      <td>6.015776e+07</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2009</th>\n",
-              "      <td>2010</td>\n",
-              "      <td>MELSTAR</td>\n",
-              "      <td>Melstar Information Technologies Limited</td>\n",
-              "      <td>3.356538e+02</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2010</th>\n",
-              "      <td>2011</td>\n",
-              "      <td>SABEVENTS</td>\n",
-              "      <td>Sab Events &amp; Governance Now Media Limited</td>\n",
-              "      <td>3.197532e+02</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2011</th>\n",
-              "      <td>2012</td>\n",
-              "      <td>INDLMETER</td>\n",
-              "      <td>IMP Powers Limited</td>\n",
-              "      <td>2.590969e+02</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2012</th>\n",
-              "      <td>2013</td>\n",
-              "      <td>TECILCHEM</td>\n",
-              "      <td>TECIL Chemicals and Hydro Power Limited</td>\n",
-              "      <td>1.896370e+02</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2013</th>\n",
-              "      <td>Note: Kindly refer regulation 15 to 27 of SEBI...</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>2014 rows × 4 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                                Sr. No.      Symbol  \\\n",
-              "0                                                     1    RELIANCE   \n",
-              "1                                                     2         TCS   \n",
-              "2                                                     3    HDFCBANK   \n",
-              "3                                                     4   ICICIBANK   \n",
-              "4                                                     5  HINDUNILVR   \n",
-              "...                                                 ...         ...   \n",
-              "2009                                               2010     MELSTAR   \n",
-              "2010                                               2011   SABEVENTS   \n",
-              "2011                                               2012   INDLMETER   \n",
-              "2012                                               2013   TECILCHEM   \n",
-              "2013  Note: Kindly refer regulation 15 to 27 of SEBI...         NaN   \n",
-              "\n",
-              "                                   Company Name  \\\n",
-              "0                   Reliance Industries Limited   \n",
-              "1             Tata Consultancy Services Limited   \n",
-              "2                             HDFC Bank Limited   \n",
-              "3                            ICICI Bank Limited   \n",
-              "4                    Hindustan Unilever Limited   \n",
-              "...                                         ...   \n",
-              "2009   Melstar Information Technologies Limited   \n",
-              "2010  Sab Events & Governance Now Media Limited   \n",
-              "2011                         IMP Powers Limited   \n",
-              "2012    TECIL Chemicals and Hydro Power Limited   \n",
-              "2013                                        NaN   \n",
-              "\n",
-              "      Market capitalization as on March 31, 2023\\n(Rs in Lakhs)  \n",
-              "0                                          1.577069e+08          \n",
-              "1                                          1.173055e+08          \n",
-              "2                                          8.980875e+07          \n",
-              "3                                          6.124825e+07          \n",
-              "4                                          6.015776e+07          \n",
-              "...                                                 ...          \n",
-              "2009                                       3.356538e+02          \n",
-              "2010                                       3.197532e+02          \n",
-              "2011                                       2.590969e+02          \n",
-              "2012                                       1.896370e+02          \n",
-              "2013                                                NaN          \n",
-              "\n",
-              "[2014 rows x 4 columns]"
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "M&MFIN.NS ['2024-01-25']\n",
+            "ASIANPAINT.NS ['2024-01-19', '2024-01-12']\n",
+            "DRREDDY.NS ['2024-01-19']\n",
+            "HDFCBANK.NS ['2024-01-19', '2024-01-12']\n",
+            "POLYCAB.NS ['2024-01-12']\n",
+            "AXISBANK.NS ['2024-01-19', '2024-01-25']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2024-01-01 -> 2024-02-16)')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['PVR.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "CREDITACC.NS ['2024-01-25']\n",
+            "GOCOLORS.NS ['2024-01-19', '2024-01-12']\n",
+            "SYRMA.NS ['2024-02-09']\n",
+            "GNFC.NS ['2024-02-09']\n",
+            "VBL.NS ['2024-01-19', '2024-01-25']\n",
+            "JKPAPER.NS ['2024-01-12']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['ADANITRANS.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "BALAMINES.NS ['2024-01-25']\n",
+            "CAMS.NS ['2024-01-25']\n",
+            "ADANIPOWER.NS ['2024-01-19']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['KALPATPOWR.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "KOTAKBANK.NS ['2024-01-19', '2024-01-25', '2024-01-12']\n",
+            "KNRCON.NS ['2024-01-25']\n",
+            "SUPREMEIND.NS ['2024-01-12']\n",
+            "JYOTHYLAB.NS ['2024-02-09']\n",
+            "STLTECH.NS ['2024-01-25']\n",
+            "KAJARIACER.NS ['2024-01-25']\n",
+            "HAL.NS ['2024-01-19', '2024-01-25']\n",
+            "IRCON.NS ['2024-02-09']\n",
+            "MPHASIS.NS ['2024-02-02']\n",
+            "BIRLACORPN.NS ['2024-01-19', '2024-01-25']\n",
+            "BANDHANBNK.NS ['2024-01-25']\n",
+            "LXCHEM.NS ['2024-02-09']\n",
+            "DELTACORP.NS ['2024-02-02']\n",
+            "MARUTI.NS ['2024-01-25']\n",
+            "JUBLINGREA.NS ['2024-02-02', '2024-01-25']\n",
+            "DEEPAKNTR.NS ['2024-01-19', '2024-01-25']\n",
+            "ROLEXRINGS.NS ['2024-02-09']\n",
+            "FLUOROCHEM.NS ['2024-01-12']\n",
+            "COROMANDEL.NS ['2024-02-02', '2024-01-12']\n",
+            "SONACOMS.NS ['2024-01-19']\n",
+            "ANURAS.NS ['2024-01-19']\n",
+            "QUESS.NS ['2024-01-25']\n",
+            "ANGELONE.NS ['2024-01-19', '2024-01-25']\n",
+            "BOSCHLTD.NS ['2024-01-25']\n",
+            "ALKEM.NS ['2024-01-19']\n",
+            "VINATIORGA.NS ['2024-01-19', '2024-01-25']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['MAHINDCIE.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "COLPAL.NS ['2024-01-19']\n",
+            "BAJFINANCE.NS ['2024-02-02', '2024-01-25']\n",
+            "ASTRAL.NS ['2024-01-12']\n",
+            "BATAINDIA.NS ['2024-01-25', '2024-02-09', '2024-02-02']\n",
+            "LT.NS ['2024-02-09']\n",
+            "SOLARINDS.NS ['2024-02-02', '2024-01-25']\n",
+            "UPL.NS ['2024-02-02', '2024-01-25']\n",
+            "POONAWALLA.NS ['2024-02-09']\n",
+            "SBICARD.NS ['2024-01-19']\n",
+            "TRITURBINE.NS ['2024-01-12']\n",
+            "NUVOCO.NS ['2024-01-19', '2024-01-12']\n",
+            "ADANIGREEN.NS ['2024-01-25']\n",
+            "ICICIPRULI.NS ['2024-01-19']\n",
+            "CONCOR.NS ['2024-01-25']\n",
+            "TORNTPHARM.NS ['2024-01-25']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['WELSPUNIND.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ESCORTS.NS ['2024-02-09']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['SUNCLAYLTD.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['AMARAJABAT.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AAVAS.NS ['2024-02-09']\n",
+            "360ONE.NS ['2024-01-19', '2024-01-12']\n",
+            "PRAJIND.NS ['2024-02-02']\n",
+            "VIPIND.NS ['2024-02-09']\n",
+            "GALAXYSURF.NS ['2024-02-09']\n",
+            "BALRAMCHIN.NS ['2024-01-19']\n",
+            "MEDPLUS.NS ['2024-01-19', '2024-01-25']\n",
+            "SAREGAMA.NS ['2024-01-19']\n",
+            "REDINGTON.NS ['2024-01-25']\n",
+            "EICHERMOT.NS ['2024-01-19']\n",
+            "HDFCLIFE.NS ['2024-01-19']\n",
+            "LODHA.NS ['2024-01-25']\n",
+            "POWERGRID.NS ['2024-01-19']\n",
+            "MSUMI.NS ['2024-01-25']\n",
+            "CRISIL.NS ['2024-01-12']\n",
+            "NSLNISP.NS ['2024-01-19']\n",
+            "TATACHEM.NS ['2024-02-02', '2024-01-25']\n",
+            "ZEEL.NS ['2024-01-19', '2024-01-12']\n",
+            "SKFINDIA.NS ['2024-02-09']\n",
+            "CUB.NS ['2024-02-09']\n",
+            "NTPC.NS ['2024-01-19']\n",
+            "JINDWORLD.NS ['2024-01-19']\n",
+            "BAJAJFINSV.NS ['2024-01-19']\n",
+            "AUBANK.NS ['2024-01-19', '2024-01-25', '2024-02-02']\n",
+            "DIVISLAB.NS ['2024-01-25']\n",
+            "BHARATFORG.NS ['2024-01-19']\n",
+            "COFORGE.NS ['2024-01-25']\n",
+            "CAMPUS.NS ['2024-02-09']\n",
+            "DIXON.NS ['2024-01-25']\n"
+          ]
         }
       ],
       "source": [
         "nse_df = pd.read_excel('nse_data.xlsx')\n",
-        "nse_df = nse_df.head(100)\n",
+        "nse_df = nse_df.head(500)\n",
         "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
         "\n",
         "for stock_id in list(set(nse_df['Symbol'])):\n",
-        "    dates = get_recom('TATAPOWER.NS', '2024-01-01', '2024-12-31')\n",
-        "    if len(dates) >= 1:\n",
-        "        print(stock_id, dates)\n",
+        "    try:\n",
+        "        dates = get_recom(stock_id, '2024-01-01', '2024-02-16')\n",
+        "        if len(dates) >= 1:\n",
+        "            print(stock_id, dates)\n",
+        "\n",
+        "            \n",
+        "    except:\n",
+        "        continue\n",
         "\n"
       ]
     },
