--- a/app4.ipynb
+++ b/app4.ipynb
@@ -2,9 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1 Failed download:\n",
+      "['ICICIPRULI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['ICICIGI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['JSWSTEEL.NS']: ConnectionError(ProtocolError('Connection aborted.', RemoteDisconnected('Remote end closed connection without response')))\n",
+      "\n",
+      "1 Failed download:\n",
+      "['AWL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['HDFCLIFE.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['TVSMOTOR.NS']: ConnectionError(ProtocolError('Connection aborted.', RemoteDisconnected('Remote end closed connection without response')))\n",
+      "\n",
+      "1 Failed download:\n",
+      "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2015-11-27 -> 2016-01-01)')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['WIPRO.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2023-07-11 -> 2023-08-15)')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['TIINDIA.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['ATGL.NS']: ReadTimeout(ReadTimeoutError(\"HTTPSConnectionPool(host='fc.yahoo.com', port=443): Read timed out. (read timeout=10)\"))\n",
+      "Failed to get ticker 'APOLLOHOSP.NS' reason: HTTPSConnectionPool(host='fc.yahoo.com', port=443): Read timed out. (read timeout=30)\n",
+      "\n",
+      "1 Failed download:\n",
+      "['APOLLOHOSP.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['SBILIFE.NS']: ConnectionError(ProtocolError('Connection aborted.', RemoteDisconnected('Remote end closed connection without response')))\n",
+      "\n",
+      "1 Failed download:\n",
+      "['HINDALCO.NS']: ReadTimeout(ReadTimeoutError(\"HTTPSConnectionPool(host='query2.finance.yahoo.com', port=443): Read timed out. (read timeout=10)\"))\n",
+      "\n",
+      "1 Failed download:\n",
+      "['HAL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['LTIM.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['CHOLAFIN.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2016-06-16 -> 2016-07-21)')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['VBL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['ADANITRANS.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['SBICARD.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['DMART.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['ADANIGREEN.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
+      "\n",
+      "1 Failed download:\n",
+      "['IRCTC.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n"
+     ]
+    }
+   ],
    "source": [
     "# back calculation\n",
     "#####################\n",
