added code o back test

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -109,7 +109,7 @@
         "    df['index'] = df['corr']*df['pc']\n",
         "    #print(df.sort_values(by = 'index', ascending= False).head(2))\n",
         "\n",
-        "    return dates\n",
+        "    return df1, dates\n",
         "\n",
         "    #return df"
       ]
@@ -310,14 +310,19 @@
       ],
       "source": [
         "nse_df = pd.read_excel('nse_data.xlsx')\n",
-        "nse_df = nse_df.head(500)\n",
+        "nse_df = nse_df.head(10)\n",
         "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
         "\n",
         "for stock_id in list(set(nse_df['Symbol'])):\n",
         "    try:\n",
-        "        dates = get_recom(stock_id, '2024-01-01', '2024-02-16')\n",
+        "        df, dates = get_recom(stock_id, '2024-01-01', '2024-02-16')\n",
         "        if len(dates) >= 1:\n",
+        "            \n",
         "            print(stock_id, dates)\n",
+        "\n",
+        "            cprice = df.loc[df['dates'] == '2024-02-16', 'price']\n",
+        "            invest_price = df.loc[df['dates'].isin(dates), 'price'].mean()\n",
+        "\n",
         "\n",
         "            \n",
         "    except:\n",
