--- a/testing.ipynb
+++ b/testing.ipynb
@@ -323,6 +323,10 @@
         "            cprice = df.loc[df['dates'] == '2024-02-16', 'price']\n",
         "            invest_price = df.loc[df['dates'].isin(dates), 'price'].mean()\n",
         "\n",
+        "            print( ' Prifit / Loss  :: ' , (cprice - invest_price))\n",
+        "\n",
+        "            print( ' ------------------- \\n')\n",
+        "\n",
         "\n",
         "            \n",
         "    except:\n",
