--- a/testing.ipynb
+++ b/testing.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -132,7 +132,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "HDFCBANK.NS ['2024-01-19', '2024-01-12']\n"
+            "HDFCBANK.NS ['2024-01-19', '2024-01-12']\n",
+            " Prifit / Loss  ::  Series([], Name: price, dtype: float64)\n",
+            " ------------------- \n",
+            "\n"
           ]
         }
       ],
@@ -151,7 +154,7 @@
         "            cprice = df.loc[df['Date'] == '2024-02-16', 'price']\n",
         "            invest_price = df.loc[df['Date'].isin(dates), 'price'].mean()\n",
         "\n",
-        "            print( ' Prifit / Loss  :: ' , (cprice - invest_price))\n",
+        "            print( ' Profit / Loss  :: ' , (cprice - invest_price))\n",
         "\n",
         "            print( ' ------------------- \\n')\n",
         "\n",
